Make linux setup simpler

--- a/linux/pixi.toml
+++ b/linux/pixi.toml
@@ -9,6 +9,7 @@ preview = ["pixi-build"]
 [tasks]
 start = "python rgb_clock_test.py"
 setup_ar = "python -m zipfile -e ./whl/ar_iitm-1.0-py3-none-any.whl ."
+1hz = "python rgb_clock_test.py"
 
 [activation]
 scripts = ["startup_scripts/linux_setup.sh"]
@@ -19,4 +20,4 @@ scripts = ["startup_scripts/win_setup.bat"]
 
 [dependencies]
 libsmu = ">=1.0.3,<2"
-python = ">=3.13.5,<3.14"
+python = ">=3.6,<3.7"
